plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7' // 플러그인 버전 고정
    id 'io.spring.dependency-management' version '1.1.7' // 이 플러그인이 BOM 관리
}
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}
repositories { // 라이브러리를 받아올 공개 저장소를 지정합니다
    mavenCentral()
}
dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation('com.h2database:h2') // 인메모리 관계형 데이터베이스
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // spring data jpa
    implementation 'org.springframework.boot:spring-boot-starter-mustache'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
}
test {
    useJUnitPlatform()
    jvmArgs("-XX:+EnableDynamicAgentLoading")
}